Update and rename main.c to main.5

--- a/main.5
+++ b/main.5
@@ -12,7 +12,7 @@ int main()
     scanf("%lf", &c);
     delta = b*b - 4*a*c;
     if(delta < 0){
-        printf("Não existem raizes reais!\n");
+        printf("NÃ£o existem raizes reais!\n");
     }
     else if(delta == 0) {
         x1 = -b/(2*a);
